# firefly-mobile-emulator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: continuous_deployment_android.yml  continuous_integration.yml
src/: catalog.rs  drawing.rs  imports.rs  input.rs  main.rs  ui.rs
src/ui/: clickable.rs  gestures.rs
