[package]
name = "fireflydroid"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
embedded-graphics = "0.8.1"
firefly-hal = "0.3.1"
firefly-runtime = "0.9.1"
firefly-types = "0.7.1"
kaolin = { git = "https://github.com/oli-obk/kaolin.git", branch = "custom_data"}
macroquad = { version = "0.4.14", features = ["backtrace"] }
miniserde = "0.1.45"
ureq = "3.1.4"
zip = { version = "7.0.0", default-features = false, features = ["zstd"] }

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
firefly-hal = { git = "https://github.com/oli-obk/firefly-hal.git", branch = "main" }
